--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,115 +1,254 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
-
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
+@inproceedings{lei2017deriving,
+  title={Deriving neural architectures from sequence and graph kernels},
+  author={Lei, Tao and Jin, Wengong and Barzilay, Regina and Jaakkola, Tommi},
+  booktitle={International Conference on Machine Learning (ICML)},
+  year={2017}
 }
 
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@inproceedings{jin2018junction,
+  title={Junction Tree Variational Autoencoder for Molecular Graph Generation},
+  author={Jin, Wengong and Barzilay, Regina and Jaakkola, Tommi},
+  booktitle={International Conference on Machine Learning (ICML)},
+  year={2018}
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@inproceedings{jin2018learning,
+  title={Learning Multimodal Graph-to-Graph Translation for Molecular Optimization},
+  author={Jin, Wengong and Yang, Kevin and Barzilay, Regina and Jaakkola, Tommi},
+  booktitle={International Conference on Learning Representations (ICLR)},
+  year={2018}
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255}
+@inproceedings{lee2019functional,
+  title={Functional Transparency for Structured Data: a Game-Theoretic Approach},
+  author={Lee, Guang-He and Jin, Wengong and Alvarez-Melis, David and Jaakkola, Tommi S},
+  booktitle={International Conference on Machine Learning (ICML)},
+  year={2019}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
+@article{yang2019analyzing,
+  title={Analyzing learned molecular representations for property prediction},
+  author={Yang, Kevin and Swanson, Kyle and Jin, Wengong and Coley, Connor and Eiden, Philipp and Gao, Hua and Guzman-Perez, Angel and Hopper, Timothy and Kelley, Brian and Mathea, Miriam and others},
+  journal={Journal of chemical information and modeling},
+  volume={59},
   number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+  pages={3370--3388},
+  year={2019},
+  publisher={American Chemical Society}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@inproceedings{jin2020hierarchical,
+  title={Hierarchical Generation of Molecular Graphs using Structural Motifs},
+  author={Jin, Wengong and Barzilay, Regina and Jaakkola, Tommi},
+  booktitle={International Conference on Machine Learning (ICML)},
+  year={2020}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@inproceedings{jin2020multi,
+  title={Multi-Objective Molecule Generation using Interpretable Substructures},
+  author={Jin, Wengong and Barzilay, Regina and Jaakkola, Tommi},
+  booktitle={International Conference on Machine Learning (ICML)},
+  year={2020}
 }
 
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
+@inproceedings{yang2020improving,
+  title={Improving Molecular Design by Stochastic Iterative Target Augmentation},
+  author={Yang, Kevin and Jin, Wengong and Swanson, Kyle and Barzilay, Regina and Jaakkola, Tommi},
+  booktitle={International Conference on Machine Learning (ICML)},
+  year={2020}
 }
 
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+@article{stokes2020deep,
+  title={A deep learning approach to antibiotic discovery},
+  author={Stokes, Jonathan M and Yang, Kevin and Swanson, Kyle and Jin, Wengong and Cubillos-Ruiz, Andres and Donghia, Nina M and MacNair, Craig R and French, Shawn and Carfrae, Lindsey A and Bloom-Ackermann, Zohar and others},
+  journal={Cell},
+  volume={180},
+  number={4},
+  pages={688--702},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@article{jin2020enforcing,
+  title={Enforcing Predictive Invariance across Structured Biomedical Domains},
+  author={Jin, Wengong and Barzilay, Regina and Jaakkola, Tommi},
+  journal={arXiv preprint arXiv:2006.03908},
+  year={2020}
+}
+
+@inproceedings{yang2021mol2image,
+  title={Mol2Image: improved conditional flow models for molecule to image synthesis},
+  author={Yang, Karren and Goldman, Samuel and Jin, Wengong and Lu, Alex X and Barzilay, Regina and Jaakkola, Tommi and Uhler, Caroline},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition},
+  pages={6688--6698},
+  year={2021}
+}
+
+@article{jin2021deep,
+  title={Deep learning identifies synergistic drug combinations for treating COVID-19},
+  author={Jin, Wengong and Stokes, Jonathan M and Eastman, Richard T and Itkin, Zina and Zakharov, Alexey V and Collins, James J and Jaakkola, Tommi S and Barzilay, Regina},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={118},
+  number={39},
+  pages={e2105070118},
+  year={2021},
+  publisher={National Academy of Sciences}
+}
+
+@inproceedings{jin2021iterative,
+  title={Iterative refinement graph neural network for antibody sequence-structure co-design},
+  author={Jin, Wengong and Wohlwend, Jeremy and Barzilay, Regina and Jaakkola, Tommi},
+  booktitle={International Conference on Learning Representations (ICLR)},
+  year={2021}
+}
+
+@article{bilodeau2022generating,
+  title={Generating molecules with optimized aqueous solubility using iterative graph translation},
+  author={Bilodeau, Camille and Jin, Wengong and Xu, Hongyun and Emerson, Jillian A and Mukhopadhyay, Sukrit and Kalantar, Thomas H and Jaakkola, Tommi and Barzilay, Regina and Jensen, Klavs F},
+  journal={Reaction Chemistry \& Engineering},
+  volume={7},
+  number={2},
+  pages={297--309},
+  year={2022},
+  publisher={Royal Society of Chemistry}
+}
+
+@inproceedings{coley2018automated,
+  title={Automated system for knowledge-based continuous organic synthesis: data-driven pathway design and validation},
+  author={Coley, Connor and Plehiers, Pieter and Jin, Wengong and Gao, Hanyu and Wang, Yuran and Schreck, John and Bishop, Kyle and Barzilay, Regina and Jaakkola, Tommi and Green, William and others},
+  booktitle={256th National Meeting and Exposition of the American-Chemical-Society (ACS)-Nanoscience, Nanotechnology and Beyond},
+  volume={256},
+  year={2018}
+}
+
+@article{bilodeau2022generative,
+  title={Generative models for molecular discovery: Recent advances and challenges},
+  author={Bilodeau, Camille and Jin, Wengong and Jaakkola, Tommi and Barzilay, Regina and Jensen, Klavs F},
+  journal={Wiley Interdisciplinary Reviews: Computational Molecular Science},
+  volume={12},
+  number={5},
+  pages={e1608},
+  year={2022},
+  publisher={Wiley Periodicals, Inc. Hoboken, USA}
+}
+
+@inproceedings{jin2022antibody,
+  title={Antibody-Antigen Docking and Design via Hierarchical Equivariant Refinement},
+  author={Jin, Wengong and Barzilay, Regina and Jaakkola, Tommi},
+  booktitle={International Conference on Machine Learning (ICML)},
+  year={2022}
+}
+
+@article{jin2017predicting,
+  title={Predicting organic reaction outcomes with weisfeiler-lehman network},
+  author={Jin, Wengong and Coley, Connor and Barzilay, Regina and Jaakkola, Tommi},
+  journal={Advances in neural information processing systems},
+  volume={30},
+  year={2017}
+}
+
+@article{coley2019graph,
+  title={A graph-convolutional neural network model for the prediction of chemical reactivity},
+  author={Coley, Connor W and Jin, Wengong and Rogers, Luke and Jamison, Timothy F and Jaakkola, Tommi S and Green, William H and Barzilay, Regina and Jensen, Klavs F},
+  journal={Chemical science},
+  volume={10},
+  number={2},
+  pages={370--377},
+  year={2019},
+  publisher={Royal Society of Chemistry}
+}
+
+@inproceedings{jin2023unsupervised,
+  title={Unsupervised Protein-Ligand Binding Energy Prediction via Neural Euler's Rotation Equation},
+  author={Jin, Wengong and Sarkizova, Siranush and Chen, Xun and Hacohen, Nir and Uhler, Caroline},
+  booktitle={Neural Information Processing Systems (NeurIPS)},
+  year={2023}
+}
+
+@article{koscher2023autonomous,
+  title={Autonomous, multiproperty-driven molecular discovery: From predictions to measurements and back},
+  author={Koscher, Brent A and Canty, Richard B and McDonald, Matthew A and Greenman, Kevin P and McGill, Charles J and Bilodeau, Camille L and Jin, Wengong and Wu, Haoyang and Vermeire, Florence H and Jin, Brooke and others},
+  journal={Science},
+  volume={382},
+  number={6677},
+  pages={eadi1407},
+  year={2023},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{liu2023deep,
+  title={Deep learning-guided discovery of an antibiotic targeting Acinetobacter baumannii},
+  author={Liu, Gary and Catacutan, Denise B and Rathod, Khushi and Swanson, Kyle and Jin, Wengong and Mohammed, Jody C and Chiappino-Pepe, Anush and Syed, Saad A and Fragis, Meghan and Rachwalski, Kenneth and others},
+  journal={Nature Chemical Biology},
+  volume={19},
+  number={11},
+  pages={1342--1350},
+  year={2023},
+  publisher={Nature Publishing Group US New York}
+}
+
+@inproceedings{xu2023graph,
+  title={Graph and geometry generative modeling for drug discovery},
+  author={Xu, Minkai and Liu, Meng and Jin, Wengong and Ji, Shuiwang and Leskovec, Jure and Ermon, Stefano},
+  booktitle={Proceedings of the 29th ACM SIGKDD Conference on Knowledge Discovery and Data Mining},
+  pages={5833--5834},
+  year={2023}
+}
+
+@article{jin2023dsmbind,
+  title={DSMBind: SE (3) denoising score matching for unsupervised binding energy prediction and nanobody design},
+  author={Jin, Wengong and Chen, Xun and Vetticaden, Amrita and Sarzikova, Siranush and Raychowdhury, Raktima and Uhler, Caroline and Hacohen, Nir},
+  journal={bioRxiv},
+  pages={2023--12},
+  year={2023},
+  publisher={Cold Spring Harbor Laboratory}
+}
+
+@article{wong2024discovery,
+  title={Discovery of a structural class of antibiotics with explainable deep learning},
+  author={Wong, Felix and Zheng, Erica J and Valeri, Jacqueline A and Donghia, Nina M and Anahtar, Melis N and Omori, Satotaka and Li, Alicia and Cubillos-Ruiz, Andres and Krishnan, Aarti and Jin, Wengong and others},
+  journal={Nature},
+  volume={626},
+  number={7997},
+  pages={177--185},
+  year={2024},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{pourmousa2024ai,
+  title={AI-driven discovery of synergistic drug combinations against pancreatic cancer},
+  author={Pourmousa, Mohsen and Jain, Sankalp and Barnaeva, Elena and Jin, Wengong and Hochuli, Joshua and Itkin, Zina and Maxfield, Travis and Melo-Filho, Cleber and Thieme, Andrew and Wilson, Kelli and others},
+  journal={BioRxiv},
+  year={2024}
+}
+
+@inproceedings{nori2024rnaflow,
+  title={RNAFlow: RNA Structure \& Sequence Design via Inverse Folding-Based Flow Matching},
+  author={Nori, Divya and Jin, Wengong},
+  booktitle={International Conference on Machine Learning (ICML)},
+  year={2024}
+}
+
+@inproceedings{song2024surfpro,
+  title={SurfPro: Functional Protein Design Based on Continuous Surface},
+  author={Song, Zhenqiao and Huang, Tinglin and Li, Lei and Jin, Wengong},
+  booktitle={International Conference on Machine Learning (ICML)},
+  year={2024}
+}
+
+@inproceedings{song2024generative,
+  title={Generative Enzyme Design Guided by Functionally Important Sites and Small-Molecule Substrates},
+  author={Song, Zhenqiao and Zhao, Yunlong and Shi, Wenxian and Jin, Wengong and Yang, Yang and Li, Lei},
+  booktitle={International Conference on Machine Learning (ICML)},
+  year={2024}
+}
+
+@article{huang2024protein,
+  title={Protein-Nucleic Acid Complex Modeling with Frame Averaging Transformer},
+  author={Huang, Tinglin and Song, Zhenqiao and Ying, Rex and Jin, Wengong},
+  journal={arXiv preprint arXiv:2406.09586},
+  year={2024}
 }
